@@ -16,7 +16,7 @@ CONFIG_HOST_LINUX=y
 #
 # Build Configuration
 #
-CONFIG_APPS_DIR="../apps"
+# CONFIG_APPS_DIR="../apps"
 # CONFIG_BUILD_2PASS is not set
 
 #
@@ -237,7 +237,7 @@ CONFIG_SAM34_EXTNANDSIZE=268435456
 #
 CONFIG_GPIOA_IRQ=y
 # CONFIG_GPIOB_IRQ is not set
-# CONFIG_GPIOC_IRQ is not set
+CONFIG_GPIOC_IRQ=y
 
 #
 # AT91SAM3/4 Watchdog Configuration
@@ -275,7 +275,7 @@ CONFIG_BOARD_LOOPSPERMSEC=9186
 # Interrupt options
 #
 CONFIG_ARCH_HAVE_INTERRUPTSTACK=y
-CONFIG_ARCH_INTERRUPTSTACK=0
+CONFIG_ARCH_INTERRUPTSTACK=1024
 CONFIG_ARCH_HAVE_HIPRI_INTERRUPT=y
 # CONFIG_ARCH_HIPRI_INTERRUPT is not set
 
@@ -793,7 +793,7 @@ CONFIG_NSH_CONSOLE=y
 # USB Trace Support
 #
 # CONFIG_NSH_CONDEV is not set
-# CONFIG_NSH_ARCHINIT is not set
+CONFIG_NSH_ARCHINIT=y
 
 #
 # NxWidgets/NxWM
